# llm-mas

./: .env.example  .gitignore  main.py  pyproject.toml  uv.toml
notebooks/: 01_flat_mas.ipynb  02_hierarchical_mas.ipynb  02_hierarchical_mas_updated.ipynb  03_society_mas.ipynb  03_society_of_mind_mas.ipynb  03_society_of_mind_mas_updated.ipynb  04_team_mas.ipynb  04_team_modular_mas.ipynb  04_team_modular_mas_updated.ipynb
src/llm_mas/architectures/: flat.py  hierarchical.py  society.py  team_modular.py
src/llm_mas/utils/: tools.py
